Bug 152295 - UI Custom image dimensions get reset when opening and closing Area tab
Summary: UI Custom image dimensions get reset when opening and closing Area tab
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.6.0 target:7.5.0.2
Keywords: bibisected, bisected, implementationError, regression
: 116903 (view as bug list)
Depends on:
Blocks: Area-Fill-Tab
  Show dependency treegraph
 
Reported: 2022-11-29 13:25 UTC by Gabor Kelemen (Collabora)
Modified: 2023-01-08 11:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Impress (30.54 KB, application/vnd.oasis.opendocument.presentation)
2022-11-29 13:25 UTC, Gabor Kelemen (Collabora)
Details
The example file with custom background image sizes (105.61 KB, image/png)
2022-11-29 13:30 UTC, Gabor Kelemen (Collabora)
Details
After closing and reopening the dialog (107.76 KB, image/png)
2022-11-29 13:31 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2022-11-29 13:25:39 UTC
Created attachment 183886 [details]
Example file from Impress

This was first noticed in bug 152070 and its attachment 183627 [details] but can be reproduced from scratch too.

Attached document contains a slide with background set to be a tiled image, with the custom size of 8 cm width and 6 cm height.

Opening the Slide properties dialog shows these values, but closing it resets them, thus changing the backgrounds look.

1, Open attached file
2, Right click on the slide background, select Slide Properties
3, On the Background tab observe the Width and Height are 8 and 6 cm, close the dialog.

At this point the background tiling images become larger, reopening the Slide Properties dialog shows that the Width and Height are reset to the original values of the image, 15.88 and 11.22 cm.

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 3b0b9fcb80242abcedc01eb388a57b1016916353
CPU threads: 14; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded

Seems to be like this since 6.0 with
https://git.libreoffice.org/core/+/b96174fac58eff71f0a8d2ad1e99b7776e34c33b%5E%21/#F0

author	Katarina Behrens <Katarina.Behrens@cib.de>	Thu Jun 08 00:45:32 2017 +0200
committer	Katarina Behrens <Katarina.Behrens@cib.de>	Thu Jun 08 23:14:13 2017 +0200

tdf#107087: Select bitmap fill from preset list

But that was a regression fix which fixed the defaulting of the tiling image itself.

Original commit that started to break stuff is from 5.3

https://git.libreoffice.org/core/+/686349476e03f951f4a9ff9755b9f71951b64ea5

author	Rishabh Kumar <kris.kr296@gmail.com>	Mon Aug 22 16:48:05 2016 +0530
committer	Katarina Behrens <Katarina.Behrens@cib.de>	Wed Oct 12 08:36:13 2016 +0000

[GSoC] Move all fill style tabs inside area tab

Before this a much simpler dialog did not reset these scaling values.
Comment 1 Gabor Kelemen (Collabora) 2022-11-29 13:30:33 UTC
Created attachment 183887 [details]
The example file with custom background image sizes
Comment 2 Gabor Kelemen (Collabora) 2022-11-29 13:31:59 UTC
Created attachment 183888 [details]
After closing and reopening the dialog
Comment 3 Commit Notification 2022-12-19 12:20:36 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4a4f58f06f802e7bc057e0a6e7180b595bd4a379

tdf#152295 sw sd UI: don't reset tiled image size by Area tab

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Tibor Nagy 2022-12-19 12:48:23 UTC
*** Bug 116903 has been marked as a duplicate of this bug. ***
Comment 5 NISZ LibreOffice Team 2022-12-21 10:52:36 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7d948d5c7edbbfd29a77b97a5101aa43917e5ec2
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 6 Commit Notification 2023-01-08 11:49:26 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/64a444eefc2fd1821349222eb07a720e46ea1494

tdf#152295 sw sd UI: don't reset tiled image size by Area tab

It will be available in 7.5.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.